Mon Nov  3 15:25:48 1997  Tom Yu  <tlyu@mit.edu>

	* krlogind.c (doit): Fix up potential buffer overrun.
	[krb5-appl/488]

	* krlogin.c (main): Fix up potential buffer overrun.

	* krcp.c (hosteq): Fix up potential buffer overrun.

Tue Oct  7 18:01:15 1997  Theodore Y. Ts'o  <tytso@mit.edu>

	* v4rcp.M: Removed useless .so to a non-existent macro file.

Tue Sep  2 19:44:21 1997  Tom Yu  <tlyu@mit.edu>

	* krlogind.c (main): Changes to allow for standalone daemon
	operation.  Use the "-f" flag to enable.  This automagically
	figures out which port to bind to if you don't specify it.

Mon Jun 30 13:21:34 1997  Kevin L Mitchell  <klmitch@mit.edu>

	* login.c (dofork): Solaris 2.4 puts killpg in the bsd compatibility
		libraries.  Autoconf correctly determined that it wasn't
		available, but it wasn't conditionalized out.  Added the
		conditional, using kill(-child, SIGHUP) as a replacement,
		as suggested by tlyu

Thu Jun  5 15:56:54 1997  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* login.c: Always use the new tty line discpline.  [krb5-appl/428]

	* login.c: If a hangup signal is received, pass it onto the child.
		[krb5-appl/432]

Fri Mar 28 01:05:27 1997  Theodore Y. Ts'o  <tytso@mit.edu>

	* login.c (NO_MOTD): If we're on an SGI machine, don't do the MOTD
		or MAILCHECK thing, since it's done by /etc/cshrc magic.
		(SGI's don't define __SVR4, even though it's SVR4
		derived).  [krb5-appl/158]

	* krlogin.c (try_normal): When falling back to the normal rlogin,
		clear the signal mask, so that the child rlogin handles
		SIGUSR1 (which is used for window size changes) correctly.
		[krb5-appl/335]

Tue Mar 18 12:34:03 1997  Sam Hartman  <hartmans@luminous.MIT.EDU>

 [326]	* login.c(doit):  Preserve terminal even without -p.

Thu Feb 27 10:58:07 1997  Sam Hartman  <hartmans@luminous.MIT.EDU>

	* krshd.c: Allow user to login with / as home directory if homedir
 	not found. [167]

Sat Feb 22 00:54:06 1997  Sam Hartman  <hartmans@luminous.MIT.EDU>
